[GTK]  ghost cursor when mouse hovers over an image file in a tab https://bugs.webkit.org/show_bug.cgi?id=120675

Reviewed by Carlos Garcia Campos.

No new tests, covered by existing.

* platform/gtk/CursorGtk.cpp:
(WebCore::createNamedCursor): Use new gdk_cursor_new_from_surface()
when compiling against GTK+ 3.9.12 or newer.


Canonical link: https://commits.webkit.org/138924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155329 268f45cc-cd09-0410-ab3c-d52691b4dbfc